--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -59,6 +59,9 @@
 	background: #FFFFFF;
 
 }
+.portfolio__img{
+	width:370px; height:294px;
+}
 
 .portfolio-hiden-discription-parent {
 	position: relative;
