--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,7 +10,7 @@
 }
 
 .hero {
-	background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)), url("../images/bacground-hero.jpg");
+	background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)), url("../images/Header-tab_img@2x.jpg");
 	background-size: cover;
 
 }
