--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import './components/list-media';
 @import './components/footer-form';
 @import './components/section-title';
+@import './components/mob-modal' ;
 
 @import './layout/header';
 @import './layout/hero';
