--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
-.page-header__naigation {
-	@extend %flex-wrap;
-	align-items: center;
-}
+// .page-header__naigation {
+// 	@extend %flex-wrap;
+// 	align-items: center;
+// }
 
 .page-header {
 	border-bottom: 1px solid #ECECEC;
@@ -12,6 +12,10 @@
 	align-items: center;
 @extend %flex-wrap;
 
+@media screen and (max-width: 767px) {
+		justify-content: space-between;
+	}
+
 }
 
 .site-nav {
@@ -21,13 +25,16 @@
 	margin-block-start: 0;
 	margin-block-end: 0;
 
+@media screen and (max-width: 767px) {
+		display: none;
+	}
 	
 }
 
-.site-nav .item:not(:last-child),
-.contact-list .item:not(:last-child) {
-	margin-right: 50px;
-}
+// .site-nav .item:not(:last-child),
+// .contact-list .item:not(:last-child) {
+// 	margin-right: 50px;
+// }
 
 .contact-list {
 
@@ -35,7 +42,12 @@
 	display: flex;
 	height: 17px;
 
+	@media screen and (max-width: 767px) {
+			display: none;
+		}
+
 }
+
 .logo {
 	text-decoration: none;
 	font-family: 'Raleway', sans-serif;
@@ -47,76 +59,89 @@
 }
 
 
-.site-nav__link{
-	color: var(--title-text-color);
-	padding-top: 32px;
-	padding-bottom: 32px;
-	display: block;
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// .site-nav__link{
+// 	color: var(--title-text-color);
+// 	padding-top: 32px;
+// 	padding-bottom: 32px;
+// 	display: block;
+// 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-	&:hover,
-&:focus
- {color: var(--accent-color);
-}
-}
+// 	&:hover,
+// &:focus
+//  {color: var(--accent-color);
+// }
+// }
 
 .logo-blue{
 	color: var(--accent-color);
 }
 
-.site-nav__link_current{
-	position: relative;
-color: var(--accent-color);
+// .site-nav__link_current{
+// 	position: relative;
+// color: var(--accent-color);
 
-&::after {
-	content: "";
-	position: absolute;
-	transform: translateY(44.8px);
+// &::after {
+// 	content: "";
+// 	position: absolute;
+// 	transform: translateY(44.8px);
 
-	width: 100%;
-	height: 4px;
-	border-radius: 2px;
-	background-color: var(--accent-color);
+// 	width: 100%;
+// 	height: 4px;
+// 	border-radius: 2px;
+// 	background-color: var(--accent-color);
 	
-	left: 0;
-}
+// 	left: 0;
+// }
 
-}
+// }
 
-.site-nav__link,
-.contact-list__link{
-	font-size: 14px;
-	line-height: 1.14;
-	font-weight: 500;
-	letter-spacing: 0.02em;
-}
+// .site-nav__link,
+// .contact-list__link{
+// 	font-size: 14px;
+// 	line-height: 1.14;
+// 	font-weight: 500;
+// 	letter-spacing: 0.02em;
+// }
 
-.contact-list__link {
-	color: var(--primary-text-color);
-	display: flex;
+// .contact-list__link {
+// 	color: var(--primary-text-color);
+// 	display: flex;
 
-	min-width: 143px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// 	min-width: 143px;
+// 	padding-top: 2px;
+// 	padding-bottom: 2px;
+// 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-&:hover,
-&:focus {
-	color: var(--accent-color);
-}
-}
+// &:hover,
+// &:focus {
+// 	color: var(--accent-color);
+// }
+// }
 
-.contact-list__box{
-	display: flex;
-	align-items: center;
-	gap: 10px;
-}
+// .contact-list__box{
+// 	display: flex;
+// 	align-items: center;
+// 	gap: 10px;
+// }
 
-.contact-list__icon{
-	display: inline-block;
+// .contact-list__icon{
+// 	display: inline-block;
 
-	fill: currentColor;
-}
-.page-header__logo{
-	margin-right: 93px;
+// 	fill: currentColor;
+// }
+// .page-header__logo{
+// 	margin-right: 93px;
+// }
+
+.burger-button{
+
+	padding: 12px 8px;
+
+	margin-top: 10px;
+	margin-bottom: 10px;
+
+	line-height: 0;
+ 
+	background-color: transparent ;
+ 
 }
