--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,49 +1,75 @@
 .box-footer-form {
-	display: block;
-	margin-left: auto;
+  display: block;
+  margin-left: auto;
 
-	margin-top: 12px;
-	
+  margin-top: 12px;
+
+  @media screen and (max-width: 1200px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+  }
 }
 
 .footer-form {
-@extend %flex-wrap;
+  @extend %flex-wrap;
 
-&__input{
-	width: 358px;
-	
-margin-right: 12px;
+  &__input {
+    width: 358px;
 
-	height: 50px;
-	background-color: inherit;
-	border: 1px solid rgba(255, 255, 255, 0.3);
-	border-radius: 4px;
+    margin-right: 12px;
 
-	line-height: 1.25;
-	font-weight: 400;
-	font-size: 16px;
-	color: rgba(255, 255, 255, 0.6);
-	padding-left: 16px;
+    height: 50px;
+    background-color: inherit;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
 
-	transition: border-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
+    line-height: 1.25;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.6);
+    padding-left: 16px;
 
-	&:focus{
-		outline: 1px solid transparent ;
-		border-color: var(--accent-color) ;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-		
-}}}
+    &:focus {
+      outline: 1px solid transparent;
+      border-color: var(--accent-color);
+    }
+  }
 
-.label-footer-form {
-	display: block;
-	padding-bottom: 20px;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 1.2;
-	color: #ffffff;
-	text-transform: uppercase;
+  @media screen and (max-width: 1200px) {
+    text-align: center;
+    display: block;
+  }
 }
 
+.label-footer-form {
+  display: block;
+  padding-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  @media screen and (max-width: 1200px) {
+    text-align: center;
+    display: block;
+  }
+}
+
+.footer-form__input {
+  @media screen and (max-width: 1200px) {
+    max-width: 450px;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
 .icon-footer-form {
-	margin-left: 10px;
+  margin-left: 10px;
 }
