--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,51 +1,52 @@
+.benefits__list {
+  @extend %flex-wrap;
+  gap: 30px;
 
-.benefits .list {
-@extend %flex-wrap;
-	gap: 30px;
-
-	justify-content: center;
+  justify-content: center;
 }
 
 .benefits__top-box {
-	width: 270px;
-	height: 120px;
+  width: 100%;
+  height: 120px;
 
-	background: #F5F4FA;
-	border-radius: 4px;
-	margin-bottom: 30px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
 
-	@extend %flex-center;
+  @extend %flex-center;
 }
 
 .benefits__dec-img {
-	width: 70px;
-	height: 70px;
-
+  width: 70px;
+  height: 70px;
 }
 
 .benefits__title {
-	font-size: 14px;
-	line-height: 1.14;
-	text-transform: uppercase;
-	margin-bottom: 10px;
-
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .benefits__item {
-	min-height: 100px;
-	max-width: 270px;
+  min-height: 100px;
+
+  @media screen and (max-width: 767px) {
+    max-width: 450px;
+  }
+  @media screen and (min-width: 767px) {
+    max-width: 353px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 270px;
+  }
 }
-
-
 
 .benefits__text {
-	font-size: 14px;
-	line-height: 1.71;
-	color: var(--primary-text-color);
-	font-weight: 400;
-	margin-block-end: 0;
-	margin-block-start: 0;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--primary-text-color);
+  font-weight: 400;
+  margin-block-end: 0;
+  margin-block-start: 0;
 }
-
-
-
