--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,34 +1,40 @@
 .clients {
-	list-style: none;
-@extend %flex-wrap;
-	gap: 30px;
-	justify-content: center;
-
+  list-style: none;
+  @extend %flex-wrap;
+  gap: 28px;
+  justify-content: center;
 }
 
 .clients__link {
-	@extend %flex-center;
+  @extend %flex-center;
 
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  fill: #afb1b8;
 
-	width: 170px;
-	height: 92px;
-	border: 1px solid #AFB1B8;
-	border-radius: 4px;
-	fill: #AFB1B8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 20ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 20ms,
-		border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (max-width: 767px) {
+    width: 210px;
+  }
 
-		&:hover,
-		&:focus {
-			border-color: var(--accent-color);
-		}
-		
-		&:hover .clients__icon,
-		&:focus .clients__icon
-		 {
-			fill: var(--accent-color);
-		}
+  @media screen and (min-width: 768px) {
+    width: 226px;
+  }
 
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+
+    &:hover,
+    &:focus {
+      border-color: var(--accent-color);
+    }
+
+    &:hover .clients__icon,
+    &:focus .clients__icon {
+      fill: var(--accent-color);
+    }
+  }
 }
-
