--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,147 +1,154 @@
-// .page-header__naigation {
-// 	@extend %flex-wrap;
-// 	align-items: center;
-// }
-
-.page-header {
-	border-bottom: 1px solid #ECECEC;
-
+.page-header__naigation {
+  @extend %flex-wrap;
+  align-items: center;
 }
 
-.page-header__container{
-	align-items: center;
-@extend %flex-wrap;
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
 
-@media screen and (max-width: 767px) {
-		justify-content: space-between;
-	}
+.page-header__container {
+  align-items: center;
+  @extend %flex-wrap;
 
+  @media screen and (max-width: 767px) {
+    justify-content: space-between;
+  }
 }
 
 .site-nav {
+  display: flex;
+  padding: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 
-	display: flex;
-	padding: 0;
-	margin-block-start: 0;
-	margin-block-end: 0;
-
-@media screen and (max-width: 767px) {
-		display: none;
-	}
-	
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
-// .site-nav .item:not(:last-child),
-// .contact-list .item:not(:last-child) {
-// 	margin-right: 50px;
-// }
-
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+.contact-list .item:not(:last-child) {
+  @media screen and (min-width: 1200px) {
+    margin-right: 50px;
+  }
+}
 .contact-list {
+  margin-left: auto;
+  display: flex;
+  height: 17px;
 
-	margin-left: auto;
-	display: flex;
-	height: 17px;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
-	@media screen and (max-width: 767px) {
-			display: none;
-		}
-
+  @media screen and(max-width:1200px ) {
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+  }
 }
 
 .logo {
-	text-decoration: none;
-	font-family: 'Raleway', sans-serif;
-	@include font(26px, 700, 35.96px);
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
+  @include font(26px, 700, 35.96px);
 
-	letter-spacing: 0.03em;
-	color: #000000;
-
+  letter-spacing: 0.03em;
+  color: #000000;
 }
 
+.site-nav__link {
+  color: var(--title-text-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-// .site-nav__link{
-// 	color: var(--title-text-color);
-// 	padding-top: 32px;
-// 	padding-bottom: 32px;
-// 	display: block;
-// 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-// 	&:hover,
-// &:focus
-//  {color: var(--accent-color);
-// }
-// }
-
-.logo-blue{
-	color: var(--accent-color);
+  @media screen and(min-width:1200px) {
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
 }
 
-// .site-nav__link_current{
-// 	position: relative;
-// color: var(--accent-color);
+.logo-blue {
+  color: var(--accent-color);
+}
 
-// &::after {
-// 	content: "";
-// 	position: absolute;
-// 	transform: translateY(44.8px);
+.site-nav__link_current {
+  position: relative;
+  color: var(--accent-color);
 
-// 	width: 100%;
-// 	height: 4px;
-// 	border-radius: 2px;
-// 	background-color: var(--accent-color);
-	
-// 	left: 0;
-// }
+  &::after {
+    content: '';
+    position: absolute;
+    transform: translateY(44.8px);
 
-// }
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
 
-// .site-nav__link,
-// .contact-list__link{
-// 	font-size: 14px;
-// 	line-height: 1.14;
-// 	font-weight: 500;
-// 	letter-spacing: 0.02em;
-// }
+    left: 0;
+  }
+}
 
-// .contact-list__link {
-// 	color: var(--primary-text-color);
-// 	display: flex;
+.site-nav__link,
+.contact-list__link {
+  font-size: 14px;
+  line-height: 1.14;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+}
 
-// 	min-width: 143px;
-// 	padding-top: 2px;
-// 	padding-bottom: 2px;
-// 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.contact-list__link {
+  color: var(--primary-text-color);
+  display: flex;
 
-// &:hover,
-// &:focus {
-// 	color: var(--accent-color);
-// }
-// }
+  min-width: 143px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-// .contact-list__box{
-// 	display: flex;
-// 	align-items: center;
-// 	gap: 10px;
-// }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
 
-// .contact-list__icon{
-// 	display: inline-block;
+.contact-list__box {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 
-// 	fill: currentColor;
-// }
-// .page-header__logo{
-// 	margin-right: 93px;
-// }
+.contact-list__icon {
+  display: inline-block;
 
-.burger-button{
+  fill: currentColor;
+}
+.page-header__logo {
+  margin-right: 88px;
 
-	padding: 12px 8px;
+  @media screen and(min-width:1200px ) {
+    margin-right: 93px;
+  }
+}
 
-	margin-top: 10px;
-	margin-bottom: 10px;
+.burger-button {
+  padding: 12px 8px;
 
-	line-height: 0;
- 
-	background-color: transparent ;
- 
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  line-height: 0;
+
+  background-color: transparent;
+  @media screen and (min-width: 767px) {
+    display: none;
+  }
 }
