--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,32 +1,83 @@
 .hero {
-	background-color: #2F303A;
+  background-color: #2f303a;
 
-	padding-bottom: 200px;
-	padding-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
 
-	max-width: 1920px;
-	margin-left: auto;
-	margin-right: auto;
+  padding-bottom: 118px;
+  padding-top: 118px;
+
+  background-size: cover;
 }
 
-.hero {
-	background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)), url("../images/Header-tab_img@2x.jpg");
-	background-size: cover;
+@media screen and (max-width: 767px) {
+  .hero {
+    max-width: 480px;
+    background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)),
+      url('../images/header-tel_img.jpg');
 
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)),
+        url('../images/header-tel_img@2x.jpg');
+    }
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .hero {
+    max-width: 768px;
+    background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)),
+      url('../images/header-tab_img.jpg');
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)),
+        url('../images/header-tab_img@2x.jpg');
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1920px;
+    padding-bottom: 200px;
+    padding-top: 200px;
+
+    background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)),
+      url('../images/header-des.jpg');
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(46, 48, 58, 0.41), rgba(47, 47, 58, 0.4)),
+        url('../images/header-des@2x.jpg');
+    }
+  }
 }
 
 .hero__title {
-	color: #F5F4FA;
-	@include font(44px, 900, 60px);
+  color: #f5f4fa;
 
-	text-align: center;
-	letter-spacing: 0.06em;
-	text-transform: uppercase;
+  @include font(26px, 900, 42px);
 
-	margin-bottom: 30px;
-	max-width: 700px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 
-	margin-left: auto;
-	margin-right: auto;
+  margin-bottom: 30px;
+  max-width: 360px;
 
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 1200px) {
+    @include font(44px, 900, 60px);
+    max-width: 700px;
+  }
 }
