--- a/sass/layout/_stuff.scss
+++ b/sass/layout/_stuff.scss
@@ -1,50 +1,57 @@
 .team {
-	background-color: #F5F4FA;
+  background-color: #f5f4fa;
 }
 
-.team .list {
-@extend %flex-wrap;
-	gap: 30px;
-	padding-inline-start: 0;
+.team__list {
+  @extend %flex-wrap;
+  gap: 30px;
+  padding-inline-start: 0;
 
-	justify-content: center;
+  justify-content: center;
 }
 
 .team__item {
-	background: #FFFFFF;
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-	 0px 1px 1px rgba(0, 0, 0, 0.14), 
-	 0px 2px 1px rgba(0, 0, 0, 0.2);
-	 
-	border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 
-	padding-bottom: 32px;
+  border-radius: 0px 0px 4px 4px;
+
+  padding-bottom: 32px;
+  @media screen and (max-width: 767px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 353px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
-.team__img{
-	width:270px ;
-	height:260px ;
+.team__img {
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
 }
-
-
 .team__name-mamber {
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.19;
-	text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 
-	padding-top: 30px;
-	margin-bottom: 10px;
+  padding-top: 30px;
+  margin-bottom: 10px;
 }
 
 .team__position {
-	color: var(--primary-text-color);
-	line-height: 1.19;
-	font-weight: 400;
+  color: var(--primary-text-color);
+  line-height: 1.19;
+  font-weight: 400;
 
-	margin: 0;
-	text-align: center;
+  margin: 0;
+  text-align: center;
 
-	margin-bottom:16px;
-
-
+  margin-bottom: 16px;
 }
