--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -1,29 +1,31 @@
-
-.works .list {
-@extend %flex-wrap;
-gap: 30px;
-	justify-content: center;
+.works__list {
+  @extend %flex-wrap;
+  gap: 30px;
+  justify-content: center;
 }
 
 .works {
-	padding-top: 0px;
+  @media screen and (max-width: 1200px) {
+    display: none;
+  }
+  padding-top: 0px;
 }
 
 .works__item {
-	position: relative;
+  position: relative;
 }
 
 .works__description {
-	position: absolute;
-	@extend %flex-center;
+  position: absolute;
+  @extend %flex-center;
 
-	width: 100%;
-	height: 70px;
-	background-color: rgba(47, 48, 58, 0.8);
-	bottom: 0%;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  bottom: 0%;
 
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 1.14;
-	color: #ffffff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #ffffff;
 }
