--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -6,7 +6,7 @@
   margin-right: auto;
 
   @media screen and (max-width: 767px) {
-    width: 481px;
+    max-width: 479px;
   }
 
   @media screen and (min-width: 768px) {
