--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,5 +1,6 @@
 .box-footer-form {
   display: block;
+  width: 570px;
   margin-left: auto;
 
   margin-top: 12px;
@@ -12,6 +13,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
+    width: 100%;
   }
 }
 
@@ -19,10 +21,8 @@
   @extend %flex-wrap;
 
   &__input {
-    width: 358px;
-
     margin-right: 12px;
-
+    width: 358px;
     height: 50px;
     background-color: inherit;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -60,16 +60,19 @@
   @media screen and (max-width: 1200px) {
     text-align: center;
     display: block;
+    width: 100%;
   }
 }
 
-.footer-form__input {
-  @media screen and (max-width: 1200px) {
-    max-width: 450px;
+@media screen and (max-width: 1200px) {
+  .footer-form__input {
     margin-right: 0;
     margin-bottom: 20px;
+    width: 100%;
+    max-width: 450px;
   }
 }
+
 .icon-footer-form {
   margin-left: 10px;
 }
