--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -32,7 +32,7 @@
   min-height: 100px;
 
   @media screen and (max-width: 767px) {
-    max-width: 450px;
+    max-width: 100%;
   }
   @media screen and (min-width: 767px) {
     max-width: 353px;
