--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -4,6 +4,18 @@
   gap: 28px;
   justify-content: center;
 }
+.clients__item {
+  @media screen and (max-width: 767px) {
+    width: calc((100% - 30px) / 2);
+    min-height: 92px;
+  }
+
+  @media screen and (min-width: 768px) {
+    &__item {
+      width: calc((100% - 60px) / 3);
+    }
+  }
+}
 
 .clients__link {
   @extend %flex-center;
@@ -17,7 +29,7 @@
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 767px) {
-    width: 210px;
+    max-width: 100%;
   }
 
   @media screen and (min-width: 768px) {
