--- a/css/main.css
+++ b/css/main.css
@@ -280,7 +280,6 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
   height: 581px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -288,13 +287,32 @@ img {
   padding: 40px;
 }
 
+@media screen and (min-width: 530px) {
+  .modal {
+    width: 528px;
+  }
+}
+@media screen and (max-width: 529px) {
+  .modal {
+    width: 100%;
+    height: 609px;
+  }
+  .contact-form-checkbox-desc {
+    font-size: 12px;
+    letter-spacing: 0.02em;
+    font-weight: 400;
+    line-height: 13px;
+    margin-left: 6px;
+    padding-left: 19px;
+  }
+}
 .modal-close {
   position: absolute;
   right: 8px;
   top: 8px;
   width: 30px;
   height: 30px;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -412,21 +430,26 @@ img {
 }
 
 .mob-modal {
-  opacity: 0;
-  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
+  z-index: 100;
   background-color: #fff;
   font-weight: 500;
   line-height: 1.18;
   letter-spacing: 0.02em;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mob-modal.is-open {
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
 }
 
 .mob-modal__btn {
@@ -452,7 +475,12 @@ img {
 }
 @media screen and (min-width: 480px) {
   .mob-nav {
-    max-width: 480px;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 479px) {
+  .mob-nav {
+    width: 100%;
   }
 }
 
@@ -483,6 +511,7 @@ img {
 .mob-media {
   margin-top: 64px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mob-media__link {
@@ -497,6 +526,14 @@ img {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
+@media screen and (max-width: 743px) {
+  .mob-contacts__link_tel {
+    font-size: 23px;
+  }
+  .mob-contacts__link {
+    font-size: 19px;
+  }
+}
 .page-header__naigation {
   align-items: center;
 }
