--- a/sass/components/_mob-modal.scss
+++ b/sass/components/_mob-modal.scss
@@ -1,11 +1,10 @@
 .mob-modal {
-  opacity: 0;
-  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
+  z-index: 100;
 
   background-color: #fff;
 
@@ -13,11 +12,17 @@
   line-height: 1.18;
   letter-spacing: 0.02em;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &.is-open {
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
   }
 }
 
@@ -49,7 +54,10 @@
   height: 100%;
 
   @media screen and(min-width:480px) {
-    max-width: 480px;
+    width: 100%;
+  }
+  @media screen and(max-width:479px) {
+    width: 100%;
   }
 }
 
@@ -67,8 +75,6 @@
   margin-top: auto;
 }
 
-.mob-contacts {
-}
 .mob-contacts__link_tel {
   margin-bottom: 32px;
 
@@ -84,6 +90,7 @@
 .mob-media {
   margin-top: 64px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mob-media__link {
@@ -97,4 +104,13 @@
 
 .mob-media__item:not(:last-child) {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+@media screen and(max-width:743px) {
+  .mob-contacts__link_tel {
+    font-size: 23px;
+  }
+  .mob-contacts__link {
+    font-size: 19px;
+  }
 }
