--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,37 +1,59 @@
 .modal {
-	position: absolute;
-	top: 50%;
-	left: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 
-	transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 
-	width: 528px;
-	height: 581px;
-	background-color: #ffffff;
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
+  height: 581px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 
-	padding: 40px;
+  padding: 40px;
 }
 
+@media screen and(min-width:530px) {
+  .modal {
+    width: 528px;
+  }
+}
+
+@media screen and(max-width:529px) {
+  .modal {
+    width: 100%;
+    height: 609px;
+  }
+  .contact-form-checkbox-desc {
+    font-size: 12px;
+    letter-spacing: 0.02em;
+    font-weight: 400;
+    line-height: 13px;
+
+    margin-left: 6px;
+    padding-left: 19px;
+  }
+}
 .modal-close {
-	position: absolute;
-	right: 8px;
-	top: 8px;
+  position: absolute;
+  right: 8px;
+  top: 8px;
 
-	width: 30px;
-	height: 30px;
-	background: #FFFFFF;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 
-	@extend %flex-center;
+  @extend %flex-center;
 
-	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-&:hover,&:focus {
-		background-color: rgb(255, 255, 255);
-		fill: var(--accent-color);
-	}
+  &:hover,
+  &:focus {
+    background-color: rgb(255, 255, 255);
+    fill: var(--accent-color);
+  }
 }
-
