--- a/css/main.css
+++ b/css/main.css
@@ -534,6 +534,10 @@ img {
     font-size: 19px;
   }
 }
+.mob-nav__link-curent {
+  color: var(--accent-color);
+}
+
 .page-header__naigation {
   align-items: center;
 }
@@ -892,7 +896,7 @@ img {
 }
 
 .button-portfolio {
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   color: var(--title-text-color);
   line-height: 1.62;
   font-weight: 500;
@@ -931,11 +935,21 @@ img {
 
 .item-portfolio {
   width: 370px;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
+@media screen and (max-width: 1199px) {
+  .item-portfolio {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (max-width: 768px) {
+  .item-portfolio {
+    width: 100%;
+  }
+}
 .portfolio__img {
-  width: 370px;
+  width: 100;
   height: 294px;
 }
 
@@ -951,7 +965,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  color: #FFFFFF;
+  color: #ffffff;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 63px 24px;
@@ -973,9 +987,9 @@ img {
 }
 
 .border-botom {
-  border-bottom: 1px solid #EEEEEE;
-  border-left: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
   padding: 20px 22px;
 }
 
