--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,134 +1,127 @@
-
 .button-portfolio {
-	background-color: #F5F4FA;
-	color: var(--title-text-color);
-	line-height: 1.62;
-	font-weight: 500;
+  background-color: #f5f4fa;
+  color: var(--title-text-color);
+  line-height: 1.62;
+  font-weight: 500;
 
-	padding: 6px 22px;
-	border-radius: 4px;
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-		color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 6px 22px;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-&:hover,
-&:focus {
-	background-color: var(--accent-color);
-	color: #ffffff;
-	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-		0px 1px 2px rgba(0, 0, 0, 0.08),
-		0px 2px 2px rgba(0, 0, 0, 0.12);
-
-}
-
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .current-btn {
-	background-color: var(--accent-color);
-	color: #ffffff;
+  background-color: var(--accent-color);
+  color: #ffffff;
 }
-
-
 
 .buttons {
-@extend %flex-wrap;
-	gap: 8px;
-	justify-content: center;
+  @extend %flex-wrap;
+  gap: 8px;
+  justify-content: center;
 }
-
 
 .examples-img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
-
 
 .examples-title {
-	font-size: 18px;
-	line-height: 2;
-	letter-spacing: 0.06em;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 
-	color: var(--title-text-color);
-	margin-bottom: 5px;
-
+  color: var(--title-text-color);
+  margin-bottom: 5px;
 }
-
 
 .item-portfolio {
-	width: 370px;
+  width: 370px;
 
-	background: #FFFFFF;
-
+  background: #ffffff;
 }
-.portfolio__img{
-	width:370px; height:294px;
+
+@media screen and (max-width: 1199px) {
+  .item-portfolio {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (max-width: 768px) {
+  .item-portfolio {
+    width: 100%;
+  }
+}
+
+.portfolio__img {
+  width: 100;
+  height: 294px;
 }
 
 .portfolio-hiden-discription-parent {
-	position: relative;
-	overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .portfolio-hiden-discription-child {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(33, 150, 243, 0.9);
-	color: #FFFFFF;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  color: #ffffff;
 
-	transform: translateY(101%);
-	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(101%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-	padding: 63px 24px;
-
+  padding: 63px 24px;
 }
-
-
 
 .item-lin-portfolio {
-	display: inline-block;
-	width: 100%;
-	height: 100%;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 
-	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	
-	&:hover,
-&:focus {
-	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-		0px 4px 4px rgba(0, 0, 0, 0.06),
-		1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .item-lin-portfolio:hover .portfolio-hiden-discription-child,
 .item-lin-portfolio:focus .portfolio-hiden-discription-child {
-	transform: translateY(0%);
-
+  transform: translateY(0%);
 }
 
 .border-botom {
-	border-bottom: 1px solid #EEEEEE;
-	border-left: 1px solid #EEEEEE;
-	border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
 
-	padding: 20px 22px;
+  padding: 20px 22px;
 }
-
-
 
 .examples {
-@extend %flex-wrap;
-	gap: 30px;
-	margin-top: 50px;
+  @extend %flex-wrap;
+  gap: 30px;
+  margin-top: 50px;
 
-	justify-content: center;
+  justify-content: center;
 }
 
-
-
 .examples-text {
-	color: var(--primary-text-color);
-	line-height: 1.88;
-	font-weight: 400;
+  color: var(--primary-text-color);
+  line-height: 1.88;
+  font-weight: 400;
 }
