--- a/css/main.css
+++ b/css/main.css
@@ -520,6 +520,7 @@ img {
   font-size: 18px;
   line-height: 1.22;
   color: var(--accent-color);
+  margin-top: 5px;
 }
 
 .mob-media__item:not(:last-child) {
@@ -532,6 +533,10 @@ img {
   }
   .mob-contacts__link {
     font-size: 19px;
+  }
+  .mob-media__link {
+    display: inline-block;
+    margin-top: 8px;
   }
 }
 .mob-nav__link-curent {
