--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -49,9 +49,9 @@
   background: #ffffff;
 }
 
-.portfolio__img {
-  height: 294px;
-}
+// .portfolio__img {
+//   height: 294px;
+// }
 
 .portfolio-hiden-discription-parent {
   position: relative;
