--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 468) {
   .container {
     max-width: 479px;
   }
@@ -489,7 +489,8 @@ img {
   color: #212121;
 }
 
-.mob-nav__item:not(:last-child) {
+.mob-nav__item:not(:last-child),
+.mob-contacts__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
@@ -498,7 +499,6 @@ img {
 }
 
 .mob-contacts__link_tel {
-  margin-bottom: 32px;
   font-size: 34px;
   color: var(--accent-color);
 }
@@ -585,7 +585,6 @@ img {
 .contact-list {
   margin-left: auto;
   display: flex;
-  height: 17px;
 }
 @media screen and (max-width: 767px) {
   .contact-list {
@@ -922,7 +921,6 @@ img {
 
 .buttons {
   gap: 8px;
-  justify-content: center;
 }
 
 .examples-img {
@@ -994,6 +992,11 @@ img {
   font-weight: 400;
 }
 
+@media screen and (min-width: 768px) {
+  .border-botom {
+    min-height: 148px;
+  }
+}
 @media screen and (max-width: 1199px) {
   .item-portfolio {
     width: calc((100% - 30px) / 2);
@@ -1002,6 +1005,22 @@ img {
 @media screen and (max-width: 768px) {
   .item-portfolio {
     width: 100%;
+  }
+  .border-botom {
+    min-height: 110px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .border-botom {
+    min-height: 110px;
+  }
+  .buttons {
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 625px) {
+  .buttons {
+    justify-content: center;
   }
 }
 .clients {
