--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -67,6 +67,11 @@
 
   padding: 63px 24px;
 }
+.overlay-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.6;
+}
 
 .item-lin-portfolio {
   display: inline-block;
