--- a/css/main.css
+++ b/css/main.css
@@ -765,6 +765,11 @@ img {
   justify-content: center;
 }
 
+@media screen and (max-width: 767px) {
+  .benefits__list {
+    max-width: 450px;
+  }
+}
 .benefits__top-box {
   width: 100%;
   height: 120px;
@@ -957,6 +962,12 @@ img {
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 63px 24px;
+}
+
+.overlay-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.6;
 }
 
 .item-lin-portfolio {
