--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -4,6 +4,11 @@
 
   justify-content: center;
 }
+@media screen and (max-width: 767px) {
+  .benefits__list {
+    max-width: 450px;
+  }
+}
 
 .benefits__top-box {
   width: 100%;
